# UAM_labs

./: pyproject.toml
comp_vision/lab5/: 05_dnn.ipynb
comp_vision/lab6/: 06_dnn_part2.ipynb
comp_vision/lab7/: 07_cv.ipynb
comp_vision/sw_lab1/: lab1_add.ipynb
comp_vision/sw_lab1/.ipynb_checkpoints/: sw_lab1-checkpoint.ipynb
comp_vision/w2/: 03_Regresja_logistyczna.ipynb  04_Metody_ewaluacji.ipynb
comp_vision/w3/: 03_regularyzacja.ipynb
lab5/: 05_dnn.ipynb  pyproject.toml
lab6/: 06_dnn_part2.ipynb
lab7/: 07_cv.ipynb
nlp/: 1_TFIDF.ipynb  5_transformer_ner.ipynb
nlp/2_word2vec/: 2_word2vec.ipynb
nlp/4_seq2seq/: lab4_seq2seq.ipynb
nlp/project/: project.ipynb
sem2/interpretacyjne_ml/: lab1.ipynb
sem2/interpretacyjne_ml/lab1/: lab1.ipynb
sem2/interpretacyjne_ml/lab2/: lab2.ipynb
sem2/nlp/1/: bag_of_words_tim.ipynb
sem2/nlp/10/: rag.ipynb
sem2/nlp/11/: zadanie_B_mbert_multilingual_sentiment.ipynb
sem2/nlp/12/: NER_RE.ipynb
sem2/nlp/13/: barvenov_B.ipynb
sem2/nlp/2/: word2vec.ipynb
sem2/nlp/3/: cnn_sentiment.ipynb
sem2/nlp/4/: seq2seq.ipynb
sem2/nlp/5/: attention.ipynb
sem2/nlp/6/: pretrain_finetune.ipynb
sem2/nlp/7/: evaluation.ipynb
sem2/nlp/8/: generation_summarization.ipynb
sem2/nlp/9/: llms.ipynb
sem2/nlp/project/: ODD_generation.ipynb
sem3/comp_vision/: lab1_1.ipynb  lab1_2.ipynb  lab1_3_1.ipynb  lab_2_23.ipynb
sem3/comp_vision/lab4/: lab4.ipynb  lab4_12.md
sw_lab1/: optymalizacja1.ipynb  sw_lab1.ipynb  sw_lab1_my.ipynb
w2/: 04_Metody_ewaluacji.ipynb  lab2_tasks.ipynb
w3/: 03_regularyzacja.ipynb
w4/: 04_mlp.ipynb
