[project]
name = "uczenie-glebokie"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.3.0",
    "gensim==4.3.3",
    "keras==3.10.0",
    "matplotlib>=3.10.3",
    "nltk>=3.9.1",
    "notebook>=7.4.2",
    "pandas==2.2.3",
    "pygam>=0.11.0",
    "sacrebleu>=2.5.1",
    "scikit-image>=0.25.2",
    "scikit-learn==1.6.1",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.1",
    "seqeval>=1.2.2",
    "tdqm==0.0.1",
    "tensorflow==2.17.1",
    "tensorflow-datasets>=4.9.9",
    "torch==2.2.2",
    "torchtext==0.17.2",
    "torchvision>=0.17.2",
    "transformers>=4.52.4",
]
