[project]
name = "uczenie-glebokie"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12,<3.13"
dependencies = [
    "datasets>=4.3.0",
    "keras==3.10.0",
    "matplotlib>=3.10.3",
    "notebook>=7.4.2",
    "pandas==2.2.3",
    "pygam>=0.11.0",
    "scikit-image>=0.25.2",
    "scikit-learn==1.6.1",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.1",
    "tdqm==0.0.1",
    "torch==2.6.0",
    "torchvision>=0.17.2",
    "transformers>=4.52.4",
]
